- Using  @RenderBody() -> gen body HTML - Using  @RenderSection("ClientScript", false) -> false dont force use on HTML - Using @RenderPage ("path") <=> INCLUDE file

--- a/OnlineShopDemo/OnlineShopDemo.csproj
+++ b/OnlineShopDemo/OnlineShopDemo.csproj
@@ -297,6 +297,7 @@
     <Content Include="Assets\admin\vendor\font-awesome\scss\_spinning.scss" />
     <Content Include="Assets\admin\vendor\font-awesome\scss\_stacked.scss" />
     <Content Include="Assets\admin\vendor\font-awesome\scss\_variables.scss" />
+    <Content Include="Areas\Admin\Views\Shared\_LeftMenu.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
