--- a/Models/App.config
+++ b/Models/App.config
@@ -10,7 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=localhost\sqlexpress;initial catalog=OnlineShop;persist security info=True;user id=sa;password=12345678;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+  
+  
+  
+<connectionStrings><add name="OnlineShopDbContext" connectionString="data source=localhost\sqlexpress;initial catalog=OnlineShop;persist security info=True;user id=sa;password=12345678;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
