- Using MembershipProvider to check login  + step 1: Config on web.config  + step 2: create class CustomMembershipProvider : MembershipProvider  + step 3: using MembershipProvider at LoginController file

--- a/OnlineShopDemo/OnlineShopDemo.csproj
+++ b/OnlineShopDemo/OnlineShopDemo.csproj
@@ -131,8 +131,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Code\SessionHelper.cs" />
-    <Compile Include="Areas\Admin\Code\UserSession.cs" />
+    <Compile Include="Areas\Admin\Code\CustomMembershipProvider.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
