--- a/OnlineShopDemo/bin/OnlineShopDemo.dll.config
+++ b/OnlineShopDemo/bin/OnlineShopDemo.dll.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
+  
+ 
+  
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -11,6 +17,35 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
+    <!-- Customer Membership Provider -->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Admin/Login" timeout="2880" />      
+    </authentication>
+
+    <membership defaultProvider="CustomMembershipProvider">
+      <providers>
+        <add name="CustomMembershipProvider" 
+             type="OnlineShopDemo.Areas.Admin.Code.CustomMembershipProvider"
+             connectionStringName="OnlineShopDbContext"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQUestionAndAnswer="false"
+             requiresUniqueEmail ="false"
+             maxInvalidPasswordAttempts="5"
+             minRequiredPasswordLength="6"
+             minRequiredNonalphanumericCharacters="0"
+             passwordAttemptwindow="10"
+             applicationName="OnlineShopDemo"
+             />        
+      </providers>
+    </membership>
+    
+    
+    
+    
+    
+    
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
