- Add app.js var app = angular.module('app', []); for controller can use app, if you split this app to every controller file, you will get error: x_Controller not found

--- a/OnlineShopDemo/OnlineShopDemo.csproj
+++ b/OnlineShopDemo/OnlineShopDemo.csproj
@@ -327,6 +327,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="SPA\app.js" />
     <Content Include="SPA\Controller\CategoryController.js" />
     <Content Include="SPA\apiService.js" />
     <Content Include="SPA\Controller\CategoryValidateController.js" />
