--- a/OnlineShopDemo/OnlineShopDemo.csproj
+++ b/OnlineShopDemo/OnlineShopDemo.csproj
@@ -140,15 +140,10 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
-    <Compile Include="Code\CustomMembershipProvider.cs" />
-    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Location.cs" />
-    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -329,7 +324,7 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="SPA\app.js" />
     <Content Include="SPA\Controller\CategoryController.js" />
-    <Content Include="SPA\apiService.js" />
+    <Content Include="SPA\categoryService.js" />
     <Content Include="SPA\Controller\CategoryValidateController.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -348,6 +343,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
     <Folder Include="SPA\View\" />
   </ItemGroup>
   <ItemGroup>
